# samdul10food

./: Dockerfile  README.md  pyproject.toml
src/samdul10food/: main.py
